<resources>
    <string name="app_name">Profile Demo</string>
    <string name="title_timeline">Timeline</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>

    <string name="demo_profile_name">Omar Elgazzar</string>
    <string name="bio">Love coffee, music and programming</string>
    <string name="contents">contents</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="profile_photo">Profile photo</string>
    <string name="contents_count">32</string>
    <string name="followers_count">334</string>
    <string name="following_count">21</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>